--- a/include.yaml
+++ b/include.yaml
@@ -6,7 +6,7 @@ handlers:
 # if you're adding the shell to your own app, change this regex url to the URL
 # endpoint where you want the shell to run, e.g. /shell . You'll also probably
 # want to add login: admin to restrict to admins only.
-- url: /shell/.*
+- url: /shell.*
   script: shell.main.app
   login: admin
 
