--- a/include.yaml
+++ b/include.yaml
@@ -1,7 +1,7 @@
 handlers:
 - url: /shell/static
   static_dir: /shell/static
-  expiration: 1d
+  expiration: "1d"
 
 # if you're adding the shell to your own app, change this regex url to the URL
 # endpoint where you want the shell to run, e.g. /shell . You'll also probably
